# pygments-pg

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
pygments_pg/: pg.py
