[tool.poetry]
name = "pygments-pg"
version = "0.1.0"
description = "Pygments lexer for pg (WeBWorK code."
authors = ["Malcolm Harper <mharper@crcmail.net>"]
maintainers = ["Malcolm Harper <mharper@crcmail.net>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "pygments_pg"}]
keywords = ["pygments", "lexer", "webwork", "pg"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
Pygments = "^2"
flake8 = "^5.0.4"
black = "^22.8.0"

[tool.poetry.plugins."pygments.lexers"]
pygments_pg = "pygments_pg.pg:PGLexer"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
